# special-pummel

./: .gitignore  Cargo.toml  README.md  info.toml  install.ps1  modPath.txt
src/: common.rs  duckhunt.rs  edge.rs  gaogaen.rs  gekkouga.rs  iceclimber.rs  imports.rs  installer.rs  kirby.rs  koopa.rs  koopajr.rs  lib.rs  metaknight.rs  packun.rs  pfushigisou.rs  pikmin.rs  reflet.rs  rosetta.rs  snake.rs  szerosuit.rs  tantan.rs  training.rs  vars.rs
