[package]
name = "special_pummel"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline" }
sharpsmashlinesuite = { path = "../../SharpSmashlineSuite" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smash_rs = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }
bitflags = {version = "2.6.0", optional = true } #for training
#runtime-motion-patcher = { git = "https://github.com/blu-dev/runtime-motion-patcher" , optional = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[features]
#default = ["runtime-motion-patcher"]
dev = []
devhook = ["bitflags"]
#devhook = ["bitflags","runtime-motion-patcher"]